# memtrain

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  animals.csv  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
docs/: getting-started.md  overview.md  release-process.md  roadmap-0.5.0.md  study-set-format.md
memtrain/: __main__.py  cli.py  database.py  gui.py  mtstatistics.py  question.py  settings.py
memtrain-common/: question.py
memtrain/memtrain/: __main__.py
memtrain/memtrain_cli/: __main__.py
memtrain/memtrain_common/: __init__.py  database.py  engine.py  models.py  mtstatistics.py  progress_store.py  question.py  settings.py  stats.py
memtrain/memtrain_gui/: __main__.py
memtrain_common/: database.py  engine.py
tests/: test_engine.py
